# qwen3-embedding-rag

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  answer.txt  answer_20250617_130829.txt  config.json  config.template.yaml  main.py  milvus_answer.txt  pyproject.toml  rag_config.json  rag_config.remote_milvus.json  requirements.txt  storage_answer.txt  test_config.yaml  test_mock_milvus.py  test_rag_pipeline_mock.py
.cursor/rules/: api-patterns.mdc  code-architecture.mdc  coding-standards.mdc  development-guidelines.mdc  development-workflow.mdc  main-py-best-practices.mdc  project-overview.mdc  project-structure.mdc  troubleshooting.mdc
docs/: configuration.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
rag/: base.py  cli.py  config.py  document.py  embedding.py  llm.py  main.py  milvus_service.py  pipeline.py  reranker.py  utils.py
scripts/: config_example.py  config_manager.py  example_usage.py  performance_monitor.py  test_optimized_config.py
src/rag/: app.py  base.py  cli.py  config.py  document.py  embedding.py  exceptions.py  llm.py  main.py  milvus_service.py  pipeline.py  reranker.py  utils.py
tests/: test_config.py
