[project]
name = "qwen3-embedding-rag"
version = "0.1.0"
description = "Qwen3 Embedding RAG system with Milvus vector database"
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "ruff>=0.11.13",
    "torch==2.2.2",
    "tqdm>=4.66.5",
    "pymilvus",
    "openai",
    "requests",
    "sentence-transformers",
    "transformers",
    "numpy<2",
    "httpx[socks]",
    "ollama>=0.5.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
